--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Gh pages
-        uses: AhsanAyaz/angular-deploy-gh-pages-actions@latest
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
           build_configuration: production
