--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,46 @@ on:
       - master
       - main
 jobs:
-  build:
+  install:
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: npm
+      - name: Use cached development node_modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules
+          key: development-node_modules-${{ env.CACHE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            development-node_modules-${{ env.CACHE_VERSION }}-
+            development-node_modules-
+      - name: Install dependencies
+        run: npm ci
+  test:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Use cached development node_modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules
+          key: development-node_modules-${{ env.CACHE_VERSION }}-${{ hashFiles('**/package-lock.lock') }}
+          restore-keys: |
+            development-node_modules-${{ env.CACHE_VERSION }}-
+            development-node_modules-
+      - name: Lint
+        run: npm run lint
+      - name: Unit tests
+        run: npm run test:ci
 
+  build:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
